Reverted to 7.1, adjusted some URLs.

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,10 +1,10 @@
 
 # download build env files
-FROM alpine:latest as builder
-ARG dsm_version=7.2
+FROM alpine:latest AS builder
+ARG dsm_version=7.1
 RUN apk --no-cache add curl
 RUN mkdir -p /tmp/build_env \
-	&& curl -L https://archive.synology.com/download/ToolChain/toolkit/{dsm_version}/base_env-${dsm_version}.txz | tar xzJ -C /tmp/build_env
+	&& curl -L https://global.synologydownload.com/download/ToolChain/toolkit/${dsm_version}/base/base_env-${dsm_version}.txz | tar xzJ -C /tmp/build_env
 
 # create build env
 FROM scratch
